hello i am faizan

--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -40,7 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello, I am Faizan')"
+    "print('Hello, I am Faizan')\n",
+    "print('I am 20 years old')"
    ]
   }
  ],
