--- a/test_git.ipynb
+++ b/test_git.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "print('Hello, I am Faizan')\n",
-    "print('I am 20 years old')"
+    "print('I am a Python Developer')\n"
    ]
   }
  ],
